frontend/test/should_pass/multibacktrackmatchfilter.grg
#using "model.gm"

rule r(start:Node) implements shared
{
	start --> n:Node;
	if{ !n.visited; }
	
	def var v:int;
	def x:Node;

	modify {
		delete(n);
	}
}

rule s : (M, M) implements shared
{
	root:Node --> m1:M;
	root --> m2:M;
	
	def var v:int;
	def x:Node;

	modify {
		:N<root>;
		return(m1,m2);
	}
}

sequence seqBacktrack
{
	<<[[r(::n),(m1:M,::m2)=s()]]\shared.shf(42);;false>>
}

match class shared
{
	def var v:int;
	def x:Node;
}

match filter shf<shared>(var f:int)
{
	for(m:match<class shared> in this)
	{
		m.v = m.v * f;
	}
}
