frontend/test/should_fail/matchclassimplements_001.grg
#using "matchclassmodel.gm"

rule r(start:Node) implements shared
{
	start --> n:Node;
	if{ !n.visited; }
	
	//def var v:int; implementation of v missing

	modify {
		delete(n);
	}
}

match class shared
{
	def var v:int;
}
